# mini_agent

./: .gitignore  Dockerfile  README.md  pyproject.toml  webreadme.md  webreadme.txt
.claude/skill-learning/projects/project-fc3cd61f4f2870dd/: observations.jsonl
examples/: python_callable_tool_demo.py
gateway/: package-lock.json  package.json
gateway/src/: server.js
src/mini_agent_api/: ai_service.py  server.py
src/mini_agent_sandbox/: __init__.py  cli.py  errors.py  executor.py  policy.py  service.py  session.py  tool_demo.py  types.py
web/: app.js  index.html  style.css
