[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mini-agent-sandbox"
version = "0.1.0"
description = "A minimal Python command sandbox for a mini agent project"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.27",
    "openai>=1.40",
    "python-dotenv",
]

[project.scripts]
sandbox-demo = "mini_agent_sandbox.cli:main"
mini-agent-api = "mini_agent_api.server:app"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
